# ProcessWallPressureSignal

./: .gitignore  README.md  duct_modes.py  exp_data.py  processing.py  pyproject.toml  recipe.tex  setup.py  tonal_calibration_plan.csv  tonal_calibration_plan.tex
.github/: copilot-instructions.md
ProcessWallPressureSignal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
algo/: algo.aux  algo.out  algo.tex
figures/: wall_corrected_spectrum.npz
figures/NC-NKD/: H_100psi.npy  H_10psi.npy  H_30psi.npy  (+10 more)
presentation/: jfm.cls  setup.tex  spectra_clean.aux  spectra_clean.bbl  spectra_clean.blg  spectra_clean.tex
src/: 03-09_data.py  2025_10_28_tf_compute.py  2025_10_28_tf_plot.py  25-10-15_raw_spec.py  25-10-15_spec.py  25-10-15_tf_calib.py  25-10-22_bayes_tf_calib.py  25-10-23_refit.py  25-10-24_refit.py  25-10-24_refit_constant.py  25-10-25_tf_calib_noise.py  25-10-25_tf_calib_vanilla.py  25-10-27_new_tfs_needed.py  25-10-28__density_scale.py  25-10-28_tonal.py  25-10-29__density_scale.py  25-10-29__freq_density_scale.py  25-10-29__lumped_element.py  25-10-30__2pt_tau_w.py  25-10-30__creative_lumped_element.py  25-10-30__lumped_element_stokes.py  25-10-30_tau_w.py  25-10-31__2pt_pressure.py  25-11-01__final_processing.py  25-11-01_pressure_speeds.py  25-11-02__TF_two_ways.py  25_10_28_tf_compute.py  25_10_28_tf_plot.py  apply_frf.py  atm_callibration.py  clean_raw_data.py  config_params.py  duct_table.py  fit_calibration.py  fit_powerlaw_with_positions.py  fit_speaker_scales.py  fit_target.py  frf_bayes.py  fuse_anechoic.py  i_o.py  (+32 more)
tests/: test_processor.py
(+145 files in other folders)
